--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
             "dest": "server.js",
             "methods": "*",
             "headers": {
-                "Access-Control-Allow-Origin": "http://localhost:5173, http://localhost:3000, https://be-travelbwa.vercel.app",
+                "Access-Control-Allow-Origin": "http://localhost:3000",
                 "Access-Control-Allow-Credentials": "true",
                 "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
             }
