--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,14 @@
         {
             "src": "/.*",
             "dest": "server.js",
-            "methods": "*",
+            "methods": [
+                "GET",
+                "POST",
+                "PUT",
+                "DELETE",
+                "PATCH",
+                "OPTIONS"
+            ],
             "headers": {
                 "Access-Control-Allow-Origin": "http://localhost:3000",
                 "Access-Control-Allow-Credentials": "true",
